# NodeScript

./: .gitignore  README.md  pyproject.toml
NodeScript/node_math/: node_socket_extention.py
NodeScript/node_utils/: util_functions.py
NodeScript/node_vector_math/: __init__.py  vector_functions.py
node_script/: __init__.py
node_script/node_math/: __init__.py  functions.py
node_script/node_vector_math/: node_socket_vector_extention.py
test/: test.py
